fix overlaping of gallery

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .navbar {
   transition: background-color 0.3s ease-in-out;
+  z-index: 9999999;
 }
 
 .at-top {
